--- a/Parse-Starter-Project-1-2/local.properties
+++ b/Parse-Starter-Project-1-2/local.properties
@@ -7,5 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Fri Oct 30 14:43:23 EDT 2015
+#Sat Nov 14 09:05:18 EST 2015
 sdk.dir=/Users/devinyancey/Library/Android/sdk
