--- a/Parse-Starter-Project-1-2/ParseStarterProject/src/main/AndroidManifest.xml
+++ b/Parse-Starter-Project-1-2/ParseStarterProject/src/main/AndroidManifest.xml
@@ -18,8 +18,8 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/CustomActionBarTheme"
-        android:largeHeap="true">
+        android:largeHeap="true"
+        android:theme="@style/CustomActionBarTheme" >
         <meta-data
             android:name="com.parse.APPLICATION_ID"
             android:value="@string/parse_app_id" />
@@ -43,13 +43,19 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-
         </activity>
         <activity
             android:name=".SignUpActivity"
             android:label="@string/title_activity_sign_up" >
         </activity>
-
+        <activity
+            android:name=".CreatePost"
+            android:label="CreatePost" >
+        </activity>
+        <activity
+            android:name=".DecisionActivity"
+            android:label="@string/title_activity_decision" >
+        </activity>
     </application>
 
 </manifest>
