--- a/Parse-Starter-Project-1-2/ParseStarterProject/src/main/AndroidManifest.xml
+++ b/Parse-Starter-Project-1-2/ParseStarterProject/src/main/AndroidManifest.xml
@@ -50,11 +50,12 @@
         </activity>
         <activity
             android:name=".CreatePost"
-            android:label="CreatePost" >
+            android:label="CreatePost">
         </activity>
         <activity
             android:name=".DecisionActivity"
-            android:label="@string/title_activity_decision" >
+            android:label="@string/title_activity_decision"
+            >
         </activity>
         <activity
             android:name=".PasswordReset"
