--- a/Parse-Starter-Project-1-2/ParseStarterProject/src/main/AndroidManifest.xml
+++ b/Parse-Starter-Project-1-2/ParseStarterProject/src/main/AndroidManifest.xml
@@ -65,6 +65,10 @@
             android:name=".UserPage"
             android:label="@string/title_activity_user_page" >
         </activity>
+        <activity android:name=".Settings"
+            android:label="settings">
+
+        </activity>
     </application>
 
 </manifest>
